--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -404,28 +404,53 @@ input:checked+.slider:before {
     font-weight: 600;
     line-height: normal;
 }
-
-/* form */
-
-.guestRating .form{
-        margin-top: 1.666666667vh;    
-}   
+ 
 
 /* form input */
 
 .guestRating .form input[type="radio"]{
-
+    appearance: none;
     accent-color:#006E5E;
     width: 1.041666667vw;
     height: 1.041666667vw;
     min-width: 16px;
     min-height:16px ;
-    border: 1.5px;
+    /* border: 1.5px solid #9E9E9E; */
     border-radius: 100px;
+    border: 1.5px solid #9E9E9E;
+    position: relative;
+}
+
+/* radio button fill styling */
+
+.guestRating .form input[type="radio"]::after {
+    content: "" ;
+    width: 50% ;
+    height: 50% ;
+    background-color: #006E5E;
+    border-radius: 50%;
+    position: absolute;
+    top: 50% ;
+    left: 50% ;
+    transform: translate(-50%, -50%) scale(0) ;
+}
+
+/* after checked action */
+
+.guestRating .form input[type="radio"]:checked::after {
+    transform: translate(-50%, -50%) scale(1);
 }
 
 @media (max-width:600px) {
 
+    .filterArea{
+        /* border: 1px solid red; */
+        width: 100%;
+        margin-left: 0px;
+        padding-bottom: 0px;
+        height: 35px;
+    }
+    
     .compareProperties,
     .mapSection,
     .searchInput,
@@ -435,5 +460,78 @@ input:checked+.slider:before {
     {
         display: none;
     }
-    
+
+    .filterBoxMobile{
+        border: 0.5px solid #D9D9D9 ;
+        width: 17.27vw ;
+        height: 35px ;
+        position: relative ;
+        margin-left: 4.54vw ;
+        display: inline-block ;
+        border-radius: 5px ;
+    }
+
+    .filterBoxMobile svg{
+        position: absolute;
+        width: 5.454545455vw;
+        height: 68.571428571%;
+        left: 9.210526316%;
+        top: 14.285714286%;
+        bottom: 14.285714286%;
+        /* border: 1px solid red; */
+        /* display: inline-block; */
+    }
+
+    .filterBoxMobile p{
+        position: absolute;
+        color: #424242;
+        right:14.473684211% ;
+        top: 28.571428571%;
+        font-size: 12px;
+        width: 38.157894737%;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    .sortByRecommended {
+        width:31.81vw ;
+        margin-left: 41.81vw;
+        margin-right:3.54vw ;
+        height: 35px;
+        border: 0.5px solid #D9D9D9 ;
+        display: inline-block;
+        border-radius: 5px;
+        position: relative;
+    }
+
+    .sortByRecommended p:nth-child(2){
+        position: absolute;
+        color: #424242;
+        top: 45.714285714%;
+    }
+
+    .sortByRecommended p{
+        position: absolute;
+        color: #9E9E9E;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        /* border: 1px solid red; */
+        /* width: 30%; */
+        left:6.428571429%;
+        top: 8.571428571%;
+        height: 14px;
+    }
+
+    .sortByRecommended svg{
+
+        right: 3.571428571%;
+        position: absolute;
+        top: 28.571428571%;
+        width: 12.142857143%;
+        height: auto;
+    }
+
 }
