--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -503,11 +503,9 @@ input:checked+.slider:before {
                             /* hotel list info section. */
 
 .hotelList{
-    /* border: 1px solid red; */
 }
 
 .hotelList .InfoPane .textArea {
-    /* border: 1px solid red; */
     float: left;
 }
 
@@ -518,7 +516,6 @@ input:checked+.slider:before {
     font-weight: 600;
     line-height: normal;
     width: fit-content;
-    /* border: 1px solid orange; */
 }
 .hotelList .InfoPane .textArea p:nth-child(2) {
     color: #FEBE43;
@@ -528,7 +525,6 @@ input:checked+.slider:before {
     line-height: normal;
     margin-top: 0.37037037vh;
     width: fit-content;
-    /* border: 1px solid orange; */
 }
 
 .hotelList .InfoPane .button{
@@ -537,12 +533,10 @@ input:checked+.slider:before {
     border: 1px solid #D9D9D9;
     float: right;
     border-radius: 10px;
-    /* position: relative; */
     align-items: center;
     align-self: center;
     align-content: center;
     justify-content: center;
-    
 }
 
 .hotelList .InfoPane .button p:nth-child(1){
@@ -552,11 +546,7 @@ input:checked+.slider:before {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    /* border: 1px solid orange; */
     width: fit-content;
-    /* text-align: center; */
-    /* left: 5%; */
-    /* top:20%; */
     height: 30%;
     margin-left: 5%;
 }
@@ -568,11 +558,7 @@ input:checked+.slider:before {
     font-weight: 400;
     line-height: normal;
     width: fit-content;
-    /* left: 5%; */
-    /* position: absolute; */
-    /* top: 53.333333333%; */
     height: 30%;
-    /* border: 1px solid orange; */
     line-height: normal;
     bottom: 16.666666667%;
     margin-left: 5%;
@@ -648,14 +634,14 @@ input:checked+.slider:before {
     position: relative;
     /* border: 1px solid red; */
     width: 32.093023256%;
-    height: 23.148148148vh;
+    height: 100%;
     float: left;
 }
 
 .hotelPhoto{
     position: absolute;
     width: 100%;
-    height: 23.148148148vh;
+    height: 100%;
     border-radius: 10px 0px 0px 10px;
 }
 
@@ -696,11 +682,93 @@ input:checked+.slider:before {
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    position: absolute;
-    /* border: 1px solid orange ; */
+    /* position: absolute; */
     position: relative;
-    /* width: 302px; */
+    width: 67.906976744%;
+    height: 100%;
+    /* border: 1px solid red; */
+    float: right;
 }  
+
+.hotelOne .hotelInfo .hotelName{
+    position: absolute;
+    top:2.777777778vh;
+    margin-left: 2.739726027%;
+    width: 100%;
+    font-size: 1.851851852vmin ;
+    line-height: normal;
+}
+
+.hotelOne .hotelInfo .location{
+    position: absolute;
+    color: #424242;
+    margin-left: 2.739726027%;
+    font-size: 1.666666667vmin;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: fit-content;
+    /* border: 1px solid red; */
+    top: 23.6%;
+}
+
+.hotelOne .hotelInfo  .icon{
+    position: absolute;
+    display: inline-block;
+    top: 37.6%;
+    margin-left: 2.739726027%;
+    width: 3.287671233%;
+    height: auto;
+}
+
+.hotelOne .hotelInfo  .text{
+    position: absolute;
+    color: #424242;
+    font-size: 1.481481481vmin;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    top: 37.6%;
+    margin-left: 6.98630137%;
+    /* left:2.65625vw ; */
+    /* left: 4.722222222vmin; */
+}
+
+.hotelOne .hotelInfo .roomType{
+    position: absolute;
+    color: #424242;
+    font-size: 1.203703704vmin;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    top: 52.4%;
+    margin-left: 2.739726027%;
+}
+
+.hotelOne .hotelInfo .bedTypes{
+    position: absolute;
+    color: #424242;
+    font-size: 1.111111111vmin;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    top: 60%;
+    margin-left: 2.739726027%;
+}
+
+.hotelOne .hotelInfo .impPoints{
+    position: absolute;
+    top: 69.6%;
+    color: #FEBE43;
+    font-size: 1.111111111vmin;
+    font-style: normal;
+    font-weight: 600;
+    margin-left: 3.698630137%;
+    list-style-position: inside;
+    /* border: 1px solid green; */
+}
+
+
 
 
 /* filter and sort buttons hided on mobile */
