--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -502,125 +502,146 @@ input:checked+.slider:before {
 
                             /* hotel list info section. */
 
-.hotelList{
-}
+    .hotelList .InfoPane{
+        /* border: 1px solid green; */
+        height: 5.555555556vh;
+        display: flex;
+        justify-content: space-between;
+    }
 
-.hotelList .InfoPane .textArea {
-    float: left;
-}
+        .hotelList .InfoPane .textArea{
+            /* border: 1px solid red; */
+            width: fit-content;
+            height: 5.555555556vh;
+        }
 
-.hotelList .InfoPane .textArea p:nth-child(1) {
-    color: #424242;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    width: fit-content;
-}
-.hotelList .InfoPane .textArea p:nth-child(2) {
-    color: #FEBE43;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-top: 0.37037037vh;
-    width: fit-content;
-}
+            .hotelList .InfoPane .textArea p:nth-child(1) {
+                color: #424242;
+                font-size: 2.222222222vmin;
+                font-style: normal;
+                font-weight: 600;
+                line-height: normal;
+                width: fit-content;
+            }
 
-.hotelList .InfoPane .button{
-    width: 15.625vw;
-    height: 5.555555556vh;
-    border: 1px solid #D9D9D9;
-    float: right;
-    border-radius: 10px;
-    align-items: center;
-    align-self: center;
-    align-content: center;
-    justify-content: center;
-}
+            .hotelList .InfoPane .textArea p:nth-child(2) {
+                color: #FEBE43;
+                font-size: 1.481481481vmin;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+                margin-top: 0.37037037vh;
+                width: fit-content;
+            }
 
-.hotelList .InfoPane .button p:nth-child(1){
-    /* position: absolute; */
-    color: #9E9E9E;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    width: fit-content;
-    height: 30%;
-    margin-left: 5%;
-}
+    .hotelList .InfoPane .button{
+        width: 15.625vw;
+        height: 5.555555556vh;
+        border: 1px solid #D9D9D9;
+        border-radius: 0.925925926vmin;
+        align-items: center;
+        align-self: center;
+        align-content: center;
+        justify-content: center;
+    }
 
-.hotelList .InfoPane .button p:nth-child(2){
-    color: #424242;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    width: fit-content;
-    height: 30%;
-    line-height: normal;
-    bottom: 16.666666667%;
-    margin-left: 5%;
-}
+        .hotelList .InfoPane .button p:nth-child(1){
+            /* position: absolute; */
+            color: #9E9E9E;
+            font-size: 1.388888889vmin;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            width: fit-content;
+            height: 30%;
+            margin-left: 5%;
+        }
+
+        .hotelList .InfoPane .button p:nth-child(2){
+            color: #424242;
+            font-size: 1.388888889vmin;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            width: fit-content;
+            height: 30%;
+            line-height: normal;
+            bottom: 16.666666667%;
+            margin-left: 5%;
+        }
 
 .hotelList .signInAlertBox{
-    margin-top: 3.333333333vh;
-    width: 100%;
-    background-color: #FEBE43;
+
+    margin-top: 2.777777778vh ;
+    width: 100% ;
+    background-color: #FEBE43 ;
     height: 7.407407407vh;
-    align-content: center;
-    border-radius: 10px;
+    display: flex;
+    /* flex-wrap: wrap; */
+    /* justify-content: space-between; */
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0.925925926vmin;    
 }
 
-.signInAlertBox p{
-    color: #FFF;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    width: fit-content;
-    /* border: 1px solid green; */
-    margin-left: 1.860465116%;
-    float: left;
-    height: 40px;
-    align-content: center;
-    /* display: inline-block; */
-} 
+    .signInAlertBox .textMessageBox{
+        /* border: 1px solid blue; */
+        width: 100%;
 
-.signInAlertBox .signInButton{
-    background: #006E5E;
-    width: 90px;
-    height: 40px;
-    border-radius: 100px;
-    position: relative;
-    float: right;
-    margin-right: 1.674418605%;
-    /* display: inline-block; */
-}
+    }
 
-.signInAlertBox .signInButton p{
-    color: #FFF;
-    text-align: right;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    position: absolute;
-    /* width: 46.666666667%; */
-    left: 12.222222222%;
-    top: 30%;
-    height: 40%;
+    .signInAlertBox .textMessage{  
+        color: #FFF;
+        font-size: 1.851851852vmin;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        /* border: 1px solid white;  */
+        width: fit-content;
+        /* height: fit-content; */
+        margin-left: 1.860465116%;
+        /* float: left; */
+        /* height: 40px; */
+        /* align-content: center; */
+    } 
 
-}
+    .signInAlertBox .signInButton{
+        background: #006E5E;
+        width: 8.372093023%;
+        height: 50%;
+        border-radius: 100px;
+        display: flex;
+        /* position: relative; */
+        align-items: center;  /* Centers items vertically */
+        justify-content: space-between;
+        /* float: right; */
+        margin-right: 1.674418605%;
+        /* display: inline-block; */
+    }
 
-.signInAlertBox .signInButton svg{
-    width: 33.33%;
-    height: auto;
-    position: absolute;
-    left: 61.111111111%;
-    top: 12.5%;
-}
+        .signInAlertBox .signInButton p{
+            color: #FFF;
+            /* text-align: right; */
+            font-size: 1.203703704vmin;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            /* position: absolute; */
+            /* width: 46.666666667%; */
+            /* left: 12.222222222%;
+            top: 30%;
+            height: 40%; */
+
+        }
+
+        .signInAlertBox .signInButton svg{
+            width: 2.777777778vh;
+            /* height: auto; */
+            /* position: absolute; */
+            /* left: 61.111111111%; */
+            /* top: 12.5%; */
+            /* right: 5.555555556%; */
+        }
 
                                 /* hotel Display Section */
 
@@ -824,14 +845,14 @@ input:checked+.slider:before {
     /* font-size: 13px; */
     right: 8.904109589%;
     /* top: 63.6%; */
-    bottom:9.6% ;
+    bottom:10.4% ;
     text-align: right;
     color: #424242;
     /* margin: 0; */
-    height: 6.203703704vh;
-    display: flex;
+    /* height: 6.203703704vh; */
+    /* display: flex;
     flex-direction: column;
-    align-content: space-between;
+    align-content: space-between; */
 }
 
 .stayerType{
@@ -868,6 +889,11 @@ input:checked+.slider:before {
     /* margin-top: 0px; */
 }
 
+.hotelOne ~.hotelOne{
+
+    margin-top: 1.851851852vh;
+
+}
 
 
 
