--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -1,5 +1,5 @@
 .filterArea {
-    margin-left: 12.25vw;
+    margin-left: 11.07vw;
     width: 17.60vw;
     height: auto;
     margin-top: 3.73vh;
@@ -163,11 +163,11 @@ input:checked+.slider:before {
 }
 
 .hotelList {
-    width: 54.86vw;
+    width: 55.98vw;
     display: inline-block;
     margin-left: 1.01vw;
     margin-top: 3.888888889vh;
-    margin-right: 12.25vw;
+    margin-right: 11.07vw;
 }
 
 .filterSection {
@@ -515,7 +515,7 @@ input:checked+.slider:before {
             height: 5.555555556vh;
         }
 
-            .hotelList .InfoPane .textArea p:nth-child(1) {
+            .hotelList .InfoPane .textArea p:nth-child(1){
                 color: #424242;
                 font-size: 2.222222222vmin;
                 font-style: normal;
@@ -586,18 +586,18 @@ input:checked+.slider:before {
 
     .signInAlertBox .textMessageBox{
         /* border: 1px solid blue; */
-        width: 100%;
+        width: 90%;
 
     }
 
-    .signInAlertBox .textMessage{  
+    .signInAlertBox .textMessage {  
         color: #FFF;
         font-size: 1.851851852vmin;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
         /* border: 1px solid white;  */
-        width: fit-content;
+        /* width: fit-content; */
         /* height: fit-content; */
         margin-left: 1.860465116%;
         /* float: left; */
@@ -609,39 +609,52 @@ input:checked+.slider:before {
         background: #006E5E;
         width: 8.372093023%;
         height: 50%;
-        border-radius: 100px;
+        border-radius: 9.259259259vmin;
         display: flex;
         /* position: relative; */
         align-items: center;  /* Centers items vertically */
-        justify-content: space-between;
+        justify-content: center;
         /* float: right; */
         margin-right: 1.674418605%;
         /* display: inline-block; */
     }
 
-        .signInAlertBox .signInButton p{
-            color: #FFF;
-            /* text-align: right; */
-            font-size: 1.203703704vmin;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            /* position: absolute; */
-            /* width: 46.666666667%; */
-            /* left: 12.222222222%;
-            top: 30%;
-            height: 40%; */
+    /* 46.666666667 */
 
+        /* width : 46.666666667% ; */
+        .signInAlertBox .signInButton .textBox{
+            /* border: 0.092592593px solid white ; */
+            /* width : 46.666666667% ; */
+/* width: 42px; */
+            /* height: 40% ;  */
+        }
+            .signInAlertBox .signInButton p{
+                color: #FFF;
+                /* text-align: right; */
+                font-size: 1.203703704vmin;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+                height: auto;
+                /* border: 0.092592593px solid white; */
+            }
+
+        .signInAlertBox .signInButton .iconBox{
+
+            width: 1.5625vmax;
+            height: auto;
         }
 
-        .signInAlertBox .signInButton svg{
-            width: 2.777777778vh;
-            /* height: auto; */
-            /* position: absolute; */
-            /* left: 61.111111111%; */
-            /* top: 12.5%; */
-            /* right: 5.555555556%; */
-        }
+            .signInAlertBox .signInButton svg{
+                width: 100%;
+                height: 100%;
+                /* width: 1.5625vmax; */
+                /* height: auto; */
+                /* position: absolute; */
+                /* left: 61.111111111%; */
+                /* top: 12.5%; */
+                /* right: 5.555555556%; */
+            }
 
                                 /* hotel Display Section */
 
@@ -696,7 +709,6 @@ input:checked+.slider:before {
     width: 1.25vw;
     height: 1.25vw;
 }
-
 
 .hotelOne .hotelInfo {
     color: #424242;
