--- a/pages/components/filterArea/filterArea.module.css
+++ b/pages/components/filterArea/filterArea.module.css
@@ -163,7 +163,7 @@ input:checked+.slider:before {
 }
 
 .hotelList {
-    width: 55.98vw;
+    width: 55.989583333vw;
     display: inline-block;
     margin-left: 1.01vw;
     margin-top: 3.888888889vh;
@@ -584,11 +584,10 @@ input:checked+.slider:before {
     border-radius: 0.925925926vmin;    
 }
 
-    .signInAlertBox .textMessageBox{
-        /* border: 1px solid blue; */
-        width: 90%;
-
-    }
+    /* .signInAlertBox .textMessageBox{
+        width: fit-content;
+        height: fit-content;
+    } */
 
     .signInAlertBox .textMessage {  
         color: #FFF;
@@ -597,8 +596,8 @@ input:checked+.slider:before {
         font-weight: 600;
         line-height: normal;
         /* border: 1px solid white;  */
-        /* width: fit-content; */
-        /* height: fit-content; */
+        width: fit-content;
+        height: fit-content;
         margin-left: 1.860465116%;
         /* float: left; */
         /* height: 40px; */
@@ -640,7 +639,6 @@ input:checked+.slider:before {
             }
 
         .signInAlertBox .signInButton .iconBox{
-
             width: 1.5625vmax;
             height: auto;
         }
@@ -656,114 +654,117 @@ input:checked+.slider:before {
                 /* right: 5.555555556%; */
             }
 
+
                                 /* hotel Display Section */
 
 .hotelOne{
     margin-top: 2.777777778vh;
-    border-radius: 10px;
-    border: 1px solid #D9D9D9;
-    height: 23.148148148vh;
+    border-radius: 0.925925926vmin;
+    border: 0.092592593px solid #D9D9D9;
+    height: 23.333333333vh;
+    width: 56.09375vw;
 }
 
-.imageContainer{
-    position: relative;
-    /* border: 1px solid red; */
-    width: 32.093023256%;
-    height: 23.148148148vh;
-    float: left;
-}
+    .imageContainer{
+        position: relative;
+        /* border: 1px solid red; */
+        width: 32.093023256%;
+        height: 23.148148148vh;
+        float: left;
+    }
 
-.hotelPhoto{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px 0px 0px 10px;
-}
+        .hotelPhoto{
+            position: absolute;
+            width: 17.96875vw;
+            height: 100%;
+            border-radius: 0.925925926vh 0px 0px 0.925925926vh;
+        }
 
-.svgContainer{
-    position: relative;
-    /* position: absolute; */
-    /* border: 1px solid purple; */
-    /* right:    2.898550725%; */
-    right: 10%;
-    top: 4%;
-    left: 86.956521739%;
-    width: 1.822916667vw;
-    height: 1.822916667vw;
-}
+        .svgContainer{
+            position: relative;
+            /* position: absolute; */
+            /* border: 1px solid purple; */
+            /* right:    2.898550725%; */
+            right: 10%;
+            top: 4%;
+            left: 86.956521739%;
+            width: 1.822916667vw;
+            height: 1.822916667vw;
+        }
 
-.imageContainer svg:nth-child(1){
-    fill: rgba(255, 255, 255, 0.80);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
+            .imageContainer svg:nth-child(1){
+                fill: rgba(255, 255, 255, 0.80);
+                position: absolute;
+                width: 100%;
+                height: 100%;
+            }
 
-.imageContainer svg:nth-child(2){
-    fill: #006E5E;
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    top: 20%;
-    left: 14.285714286%;    
-    width: 1.25vw;
-    height: 1.25vw;
-}
+            .imageContainer svg:nth-child(2){
+                fill: #006E5E;
+                position: absolute;
+                width: 24px;
+                height: 24px;
+                top: 20%;
+                left: 14.285714286%;    
+                width: 1.25vw;
+                height: 1.25vw;
+            }
 
-.hotelOne .hotelInfo {
-    color: #424242;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    /* position: absolute; */
-    position: relative;
-    width: 67.906976744%;
-    height: 23.148148148vh;
-    /* border: 1px solid red; */
-    float: right;
-}  
+    .hotelOne .hotelInfo {
+        font-size: 1.851851852px;
+        /* position: absolute; */
+        position: relative;
+        width: 67.906976744%;
+        height: 23.148148148vh;
+        /* border: 1px solid red; */
+        float: right;
 
-.hotelOne .hotelInfo .hotelName{
-    position: absolute;
-    top:2.777777778vh;
-    margin-left: 2.739726027%;
-    width: 100%;
-    font-size: 1.851851852vmin ;
-    line-height: normal;
-}
+    }  
 
-.hotelOne .hotelInfo .location{
-    position: absolute;
-    color: #424242;
-    margin-left: 2.739726027%;
-    font-size: 1.666666667vmin;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    width: fit-content;
-    /* border: 1px solid red; */
-    top: 23.6%;
-}
+        .hotelOne .hotelInfo .hotelName{
+            color: #424242;
+            position: absolute;
+            top:12%;
+            left: 2.739726027%;
+            width: fit-content;
+            font-size: 1.851851852vmin ;
+            line-height: normal;
+            font-style: normal;
+            font-weight: 600;
+        }
 
-.hotelOne .hotelInfo  .icon{
-    position: absolute;
-    display: inline-block;
-    top: 37.6%;
-    margin-left: 2.739726027%;
-    width: 3.287671233%;
-    height: auto;
-}
+        .hotelOne .hotelInfo .location{
+            position: absolute;
+            color: #424242;
+            left: 2.739726027%;
+            font-size: 1.666666667vmin;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            width: fit-content;
+            /* border: 1px solid red; */
+            top: 23.6%;
+        }
+
+    .hotelOne .hotelInfo  .icon{
+        position: absolute;
+        display: inline-block;
+        top: 36.8%;
+        margin-left: 2.739726027%;
+        width: 1.25vmax;
+        height: auto;
+    }
 
 .hotelOne .hotelInfo  .text{
     position: absolute;
     color: #424242;
-    font-size: 1.481481481vmin;
+    font-size: 0.833333333vmax;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     top: 37.6%;
     margin-left: 6.98630137%;
+    /* border: 1px solid red; */
     /* left:2.65625vw ; */
     /* left: 4.722222222vmin; */
 }
